@@ -17,20 +17,18 @@
 
 namespace AlphaLemon\AlphaLemonCmsBundle\Command\Update;
 
-use Symfony\Bundle\FrameworkBundle\Command\ContainerAwareCommand;
 use Symfony\Component\Console\Input\InputArgument;
 use Symfony\Component\Console\Input\InputInterface;
 use Symfony\Component\Console\Output\OutputInterface;
 use Symfony\Component\Console\Input\InputOption;
 use Symfony\Component\Filesystem\Filesystem;
-use AlphaLemon\AlphaLemonCmsBundle\Core\Repository\Propel\Base\AlPropelOrm;
 
 /**
  * Upgrades to pre-alpha1
  *
  * @author alphalemon <webmaster@alphalemon.com>
  */
-class UpdateToPreAlpha1Command extends ContainerAwareCommand
+class UpdateToPreAlpha1Command extends Base\BaseUpdateCommand
 {
     /**
      * @see Command
@@ -55,25 +53,16 @@ class UpdateToPreAlpha1Command extends ContainerAwareCommand
     protected function execute(InputInterface $input, OutputInterface $output)
     {
         $connection = new \PropelPDO($input->getArgument('dsn'), $input->getOption('user'), $input->getOption('password'));
-        $orm = new AlPropelOrm($connection);
-        
         $sqlFile = sprintf(__DIR__ . '/../../Resources/dbupdate/%s/AlphaLemonCmsPreAlpha1.sql', $input->getOption('driver'));
-        if (is_file($sqlFile)) {
-            $updateQueries = file_get_contents($sqlFile);
-
-            $queries = explode(';', $updateQueries);
-            foreach ($queries as $query) {
-                $orm->executeQuery($query);
-            }
-            
-            $sourcePath = $this->getContainer()->getParameter('kernel.root_dir') . '/../web/bundles/alphalemoncms/uploads';
-            $targetPath = $this->getContainer()->getParameter('kernel.root_dir') . '/../web/uploads';
-            $fs = new \Symfony\Component\Filesystem\Filesystem();
+        $this->executeQueries($connection, $sqlFile);
+        
+        $sourcePath = $this->getContainer()->getParameter('kernel.root_dir') . '/../web/bundles/alphalemoncms/uploads';
+        $targetPath = $this->getContainer()->getParameter('kernel.root_dir') . '/../web/uploads';
+        if (!is_dir($targetPath)) {
+            $fs = new Filesystem();
             $fs->mirror($sourcePath, $targetPath);
-
-            $output->writeln('<info>The database has been updated.</info>');
-        } else {
-            throw new \Exception(sprintf('The file %s has not been found. AlphaLemon provides only the mysql queries required to updated the database. To fix this, please create a %s folder under the %s and adjust the provided queries for your database, then launch the command again.', $sqlFile, $input->getOption('driver'), dirname($sqlFile)));
         }
+        
+        $output->writeln('<info>The database has been updated.</info>');
     }
 }
